Finished documenting api
